--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <title>Hua Cui Yuan Silk Co. LTD</title>
-  <!-- <script src="https://kit.fontawesome.com/07252974af.js" crossorigin="anonymous"></script> -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <script src="https://kit.fontawesome.com/07252974af.js" crossorigin="anonymous"></script>
+  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" /> -->
   </head>
 
   <body>
